--- a/css/flashcard-list.css
+++ b/css/flashcard-list.css
@@ -7,7 +7,7 @@
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: larger;
     font-weight: bold;
 }
 
@@ -36,6 +36,7 @@
 
 .content a {
     color: white;
+    font-size: large;
 }
 
 .book-item {
