--- a/css/master.css
+++ b/css/master.css
@@ -39,8 +39,16 @@ input {
     width: 100%;
     height: 40px;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 12px;
     box-shadow: 0 3px 3px -2px rgb(0 0 0 / 20%), 0 3px 4px 0 rgb(0 0 0 / 14%), 0 1px 8px 0 rgb(0 0 0 / 12%)
+}
+
+.btn:hover {
+    color: #fff;
+}
+
+.action {
+    padding: 0px 5px 0px 5px;
 }
 
 .btn-basic {
