--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,12 @@
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
 h1 {
     color: #424242;
     font-family: sans-serif;
@@ -21,6 +30,12 @@ ul {
     overflow-x: auto;
     overflow-y: hidden;
     flex-wrap: nowrap;
+}
+
+.container {
+    width: 90%;
+    text-align: center;
+    max-width: 600px;
 }
 
 .tab-content {
