--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,20 +1,11 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-h1, h6 {
-    max-width: 500px;
-}
-
 h2 {
     font-size: 1.5rem;
     margin-bottom: 20px;
     font-weight: bold;
+}
+
+h6 {
+    margin: 0 5px;
 }
 
 .btn {
@@ -25,23 +16,11 @@ h2 {
     font-size: large;
 }
 
-.container {
-    width: 90%;
-    max-width: 600px;
-    text-align: center;
-}
-
 .tab-content {
     border-radius: 8px;
-    max-width: 500px;
-    width: 100%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     background-color: #8acfff;
     padding: 20px;
-}
-
-.quiz-container {
-    text-align: center;
 }
 
 .quiz-status {
