--- a/css/quiz.css
+++ b/css/quiz.css
@@ -2,6 +2,7 @@ h2 {
     font-size: 1.5rem;
     margin-bottom: 20px;
     font-weight: bold;
+    color: aliceblue;
 }
 
 h6 {
@@ -10,6 +11,7 @@ h6 {
 
 .btn {
     font-weight: 600;
+    width: 70%;
 }
 
 .btn-info {
@@ -59,13 +61,14 @@ label {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-label:hover {
-    background-color: #e9e9e9;
+.correct {
+    background-color: #8bc34a;
+    color: #fff;
+    border-color: rgb(105 195 0);
 }
 
-/* Style for selected answer */
-input[type="radio"]:checked + label {
-    background-color: #2980b9;
+.incorrect {
+    background-color: #f44336;
     color: #fff;
-    border-color: #2980b9;
+    border-color: rgb(255 47 32);
 }
