--- a/css/flashcard-list.css
+++ b/css/flashcard-list.css
@@ -10,7 +10,7 @@ body {
 }
 
 .collapsible {
-    background-color: #2980b9;
+    background-color: #6745fd;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -30,10 +30,6 @@ body {
     margin-left: 5px;
 }
 
-.collapsible:hover {
-    background-color: #138496;
-}
-
 .active:after {
     content: "\2212";
 }
@@ -42,7 +38,7 @@ body {
     padding: 18px;
     display: none;
     overflow: hidden;
-    background-color: #8acfff;
+    background-color: #775bf6;
 }
 
 .content a {
