--- a/css/flashcard-list.css
+++ b/css/flashcard-list.css
@@ -10,7 +10,7 @@ body {
 }
 
 .collapsible {
-    background-color: #6745fd;
+    background-color: #232148;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -23,31 +23,31 @@ body {
 }
 
 .collapsible:after {
-    content: '\002B';
-    color: white;
-    font-weight: bold;
+    content: '\276D';
     float: right;
+    color: #9897a7;
     margin-left: 5px;
 }
 
 .active:after {
-    content: "\2212";
+    content: "﹀";
 }
 
 .content {
     padding: 18px;
+    padding-top: 0;
     display: none;
     overflow: hidden;
-    background-color: #775bf6;
+    background-color: #232148;
 }
 
 .content a {
     color: white;
-    font-size: large;
+    font-size: medium;
 }
 
 .book-item {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgb(0 0 0 / 10%);
     border-radius: 0.25rem;
     margin: 15px;
 }
@@ -56,4 +56,8 @@ body {
     font-weight: bold;
     color: white;
     padding: 0px 5px;
+}
+
+a {
+    font-weight: normal;
 }
