--- a/css/flashcard.css
+++ b/css/flashcard.css
@@ -1,7 +1,3 @@
-h1 {
-    margin-bottom: 50px;
-}
-
 .btn {
     font-weight: 600;
 }
@@ -15,7 +11,7 @@ h1 {
 }
 
 .row {
-    margin-top: 6rem;
+    margin-top: 20px;
 }
 
 .flip-card {
@@ -44,7 +40,7 @@ h1 {
 .card-img {
     max-width: 100px;
     border-radius: 300px;
-    box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgb(255 255 255 / 10%);
 }
 
 strong {
