--- a/css/quiz.css
+++ b/css/quiz.css
@@ -66,3 +66,24 @@ label {
     color: #fff;
     border-color: #ff7066;
 }
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #5468ff;
+    padding: 20px 30px 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    z-index: 1000;
+    display: none;
+    text-align: center;
+}
+
+.close-btn {
+    color: #fff;
+    background-color: #00d9ce;
+    width: 50%;
+    font-size: small;
+}
