--- a/css/quiz.css
+++ b/css/quiz.css
@@ -72,10 +72,10 @@ label {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #5468ff;
+    background-color: #232148;
     padding: 20px 30px 15px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     display: none;
     text-align: center;
@@ -83,7 +83,6 @@ label {
 
 .close-btn {
     color: #fff;
-    background-color: #00d9ce;
-    width: 50%;
+    background-color: #5468ff;
     font-size: small;
 }
