--- a/css/master.css
+++ b/css/master.css
@@ -175,3 +175,23 @@ a.disabled {
     font-weight: bold;
     font-size: x-large;
 }
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #232148;
+    padding: 20px 30px 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: none;
+    text-align: center;
+}
+
+.close-btn {
+    color: #fff;
+    background-color: #5468ff;
+    font-size: small;
+}
