--- a/css/scramble-words.css
+++ b/css/scramble-words.css
@@ -24,6 +24,23 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
+#remove-btn {
+    box-shadow: none;
+    background: transparent;
+    border: none;
+    vertical-align: middle;
+    width: fit-content;
+    padding-left: 5px;
+}
+
+.remove-icons {
+    color: darkgray;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 25px;
+}
+
 *:disabled {
     opacity: .5;
 }
