--- a/css/unit.css
+++ b/css/unit.css
@@ -2,9 +2,13 @@ body {
     overflow: hidden;
 }
 
+.action {
+    padding: 0px 10px 0px 5px;
+}
+
 .btn {
-    height: 12rem;
-    font-size: 1rem;
+    height: 8rem;
+    font-size: .8rem;
     font-weight: bold;
     display: flex;
     flex-direction: column;
@@ -13,6 +17,6 @@ body {
 }
 
 img {
-    width: 80px;
+    width: 50px;
     margin-bottom: 5px;
 }
