--- a/css/master.css
+++ b/css/master.css
@@ -53,7 +53,7 @@ i {
     margin-top: 15px;
 }
 
-input {
+input[type="text"] {
     box-shadow: 0 0 20px rgb(255 255 255 / 10%);
     margin: 0px;
     margin-bottom: 15px;
