--- a/css/4000-enssential-english-words/speech-assessment.css
+++ b/css/4000-enssential-english-words/speech-assessment.css
@@ -58,7 +58,6 @@ body {
 
 .tab-content {
     text-align: left;
-    height: calc(100vh - 300px);
     overflow-y: auto;
     margin-top: 0;
 }
@@ -111,6 +110,30 @@ audio {
     margin: 30px 40px;
     width: 95px;
     height: 95px;
+}
+
+#stop-record::after {
+    animation: pulse 1000ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: #dc354559;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+@keyframes pulse {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        transform: scale(1.4);
+        opacity: 0.4;
+    }
 }
 
 .icon-recorder i {
@@ -214,18 +237,6 @@ i {
     font-size: 1.5rem;
     font-size: xx-large;
     font-weight: bolder;
-    color: white;
-
-    /* bottom value */
-    /* position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 1.5rem;
-    color: #333;
-    bottom: 0;
-    padding: 30px 10px;
-    background: #171531; */
 }
 
 #ref-stress {
