--- a/css/4000-enssential-english-words/flashcard.css
+++ b/css/4000-enssential-english-words/flashcard.css
@@ -72,20 +72,7 @@ audio {
     padding: 10px;
 }
 
-.modal {
-    display: none;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    background-color: rgb(0 0 0 / 48%);
-}
-
-.modal-content {
-    background-color: #232148;
-    margin: 15% auto;
-    padding: 20px;
-    box-shadow: 0 0 15px rgb(0 0 0 / 10%);
-    border-radius: 0.25rem;
+.popup {
     width: 80%;
     max-width: 500px;
 }
@@ -108,9 +95,9 @@ audio {
     cursor: pointer;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
+#editForm {
+    text-align: left;
+    padding-bottom: 20px;
 }
 
 label {
