--- a/css/master.css
+++ b/css/master.css
@@ -200,6 +200,7 @@ a.disabled {
 }
 
 .popup {
+    width: 90%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -217,4 +218,22 @@ a.disabled {
     color: #fff;
     background-color: #5468ff;
     font-size: small;
+}
+
+.close {
+    color: #5468ff;
+    font-size: 45px;
+    font-weight: normal;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    cursor: pointer;
+    text-shadow: none;
+}
+
+.close:hover,
+.close:focus {
+    color: #5468ff;
+    text-decoration: none;
+    cursor: pointer;
 }
